# dark_bot

./: Cargo.toml  Dockerfile  Dockerfile.txt  README.md  docker-compose.yml  migrations.sql
migrations/: 202607030001_initial_schema.sql
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dark-bot.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
src/: app.rs  dashboard.rs  downloader.rs  health.rs  lib.rs  main.rs  metrics.rs  processor.rs
src/bot/: commands.rs  dispatcher.rs  mod.rs
src/cache/: redis.rs
src/config/: settings.rs
src/database/: mod.rs  postgres.rs
src/errors/: app_error.rs  mod.rs
src/handlers/: admin.rs  callback.rs  cancel.rs  errors.rs  help.rs  history.rs  mod.rs  start.rs  stats.rs  status.rs  video.rs
src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs
src/models/: job.rs  mod.rs  user.rs  video.rs
src/queue/: mod.rs  worker.rs
src/services/: downloader.rs  ffmpeg.rs  metadata.rs  mod.rs  object_storage.rs  processor.rs  progress.rs  uploader.rs
src/utils/: ffprobe.rs  file.rs  mod.rs  path.rs  temp.rs
tests/: integration_test.rs  metrics_tests.rs  unit_tests.rs
