[package]
name = "dark_bot"
version = "2.0.0"
edition = "2024"
authors = ["Dark Team"]
license = "MIT"
rust-version = "1.88"

[dependencies]

# ==========================
# Runtime
# ==========================
tokio = { version = "1", features = ["full"] }

# ==========================
# Telegram
# ==========================
teloxide = { version = "0.17", features = ["macros", "ctrlc_handler"] }

# ==========================
# Async
# ==========================
futures = "0.3"
async-trait = "0.1"

# ==========================
# Serialization
# ==========================
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# ==========================
# Config
# ==========================
config = "0.15"
dotenvy = "0.15"

# ==========================
# Errors
# ==========================
thiserror = "2"
anyhow = "1"

# ==========================
# Logging
# ==========================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# ==========================
# UUID
# ==========================
uuid = { version = "1", features = ["v4","serde"] }

# ==========================
# Date
# ==========================
chrono = { version = "0.4", features = ["serde"] }

# ==========================
# HTTP
# ==========================
reqwest = { version = "0.12", features = ["json","stream"] }

# ==========================
# Database
# ==========================
sqlx = { version = "0.8", features = [
"runtime-tokio-rustls",
"postgres",
"uuid",
"chrono",
"macros"
] }

# ==========================
# Redis
# ==========================
redis = { version = "0.32", features = [
"tokio-comp",
"connection-manager"
] }

# ==========================
# Queue
# ==========================
tokio-util = "0.7"

# ==========================
# Validation
# ==========================
validator = { version = "0.20", features = ["derive"] }

# ==========================
# Regex
# ==========================
regex = "1"

# ==========================
# File System
# ==========================
walkdir = "2"

# ==========================
# Temp Files
# ==========================
tempfile = "3"

# ==========================
# Mime
# ==========================
mime = "0.3"

# ==========================
# Hashing
# ==========================
sha2 = "0.10"

# ==========================
# Random
# ==========================
rand = "0.9"

# ==========================
# Process
# ==========================
which = "8"

# ==========================
# URL
# ==========================
url = "2"

# ==========================
# Once Cell
# ==========================
once_cell = "1"

# ==========================
# Bytes
# ==========================
bytes = "1"

# ==========================
# Parking Lot
# ==========================
parking_lot = "0.12"

# ==========================
# Human Size
# ==========================
humansize = "2"

# ==========================
# Indicatif
# ==========================
indicatif = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
