[package]
name = "dark_bot"
version = "0.1.0"
edition = "2021"
authors = ["Manus AI Architect"]
description = "Professional Telegram Video Processing Bot"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp", "aio", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tracing-appender = "0.2"
dotenvy = "0.15"
config = "0.14"
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
tempfile = "3.10"
walkdir = "2.4"
once_cell = "1.19"
parking_lot = "0.12"
async-trait = "0.1"
futures = "0.3"
axum = "0.7"
tokio-util = "0.7"
aws-config = "1.5"
aws-sdk-s3 = "1.57"
aws-credential-types = "1.2"
prometheus = "0.13"

[dev-dependencies]
tokio-test = "0.4"
